--- a/tests/flow.html
+++ b/tests/flow.html
@@ -143,6 +143,7 @@
   <script src="staveconnector_tests.js"></script>
   <script src="percussion_tests.js"></script>
   <script src="key_clef_tests.js"></script>
+  <script src="ledgerline_tests.js"></script>
   <script src="../vextab/vextab_tests.js"></script>
 
   <script>
@@ -175,6 +176,7 @@
       Vex.Flow.Test.StaveConnector.Start();
       Vex.Flow.Test.Percussion.Start();
       Vex.Flow.Test.ClefKeySignature.Start();
+      Vex.Flow.Test.LedgerLine.Start();
     });
   </script>
 </head>
